Bug #33538 Invalid unattended installation option and example options.server.txt
Submitted: 27 Dec 2007 18:09 Modified: 2 Jan 2008 16:28
Reporter: David Shrewsbury Email Updates:
Status: Closed
Category:Monitoring: Docs Severity:S3 (Non-critical)
Version:1.2.0 OS:Any
Assigned to: Peter Lavin Target Version:
Triage: D4 (Minor)

[27 Dec 2007 18:09] David Shrewsbury
Description:
The example options.server.txt file in sections 3.7.2 and 3.7.3 have a couple of
problems:

1) 'managerpassword' does not appear to be a valid option to the monitor installation
program. Most likely unneeded since the password is set via the web interface when
connecting to it for the first time after installation.

2) The option file mixes an agent installation option ('agentpassword') with the monitor
installation options. This should be in a separate example option file or removed totally
from these examples since having this option included will make the monitor installation
fail silently (since it is not a valid option for the monitor).

How to repeat:
n/a
[27 Dec 2007 18:09] David Shrewsbury
Set to Verified.
[2 Jan 2008 16:28] Peter Lavin
Documentation updated -- illegal options removed.
[4 Jan 2008 5:45] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/40551

ChangeSet@1.2770, 2008-01-03 23:44:16-06:00, cpowers@xeno.mysql.com +3 -0
  Bug#33538 "Falcon memory parameters on 32bit system can be set > 4GB"
  - Changed the maximum for falcon_record_memory_max from 0xFFFFFFFFFFFFFFFF to the
maximum addressable memory, i.e. 4GB for 32-bit systems, etc.
[4 Jan 2008 5:54] Christopher Powers
Sorry, commit comment had wrong bug number.
[12 Mar 2008 23:02] Bugs System
Pushed into 6.0.4-alpha