Bug#33538 "Falcon memory parameters on 32bit system can be set > 4GB" - Changed the maximum for falcon_record_memory_max from 0xFFFFFFFFFFFFFFFF to the maximum addressable memory, i.e. 4GB for 32-bit systems, etc.